welcome.lessons.welcome.variables.RunHalf.scala.error
RunHalf:5: error: illegal start of simple expression
while (!2*Biscuit=case+1) {
                  ^RunHalf:23: error: ')' expected but '}' found.
}
^